# oop_labs

./: CMakeLists.txt
.github/workflows/: main.yml
lab1/: CMakeLists.txt  main.cpp
lab1/src/: Remove_vowel.cpp
lab1/tests/: test_remove_vowel.cpp  tests.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: five.h
lab2/src/: five.cpp
lab2/tests/: test_five.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Figure.h  FigureArray.h  Hexagon.h  Octagon.h  Pentagon.h
lab3/src/: FigureArray.cpp  Hexagon.cpp  Octagon.cpp  Pentagon.cpp
lab3/tests/: test_for_my_figures.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Array.h  Array.hpp  Array.tpp  Figure.h  Figure.hpp  Hexagon.h  Hexagon.hpp  Hexagon.tpp  Octagon.h  Octagon.hpp  Octagon.tpp  Pentagon.h  Pentagon.hpp  Pentagon.tpp  Point.h  Point.hpp  Point.tpp
lab4/src/: Array.cpp  Hexagon.cpp  Octagon.cpp  Pentagon.cpp  Point.cpp
lab4/tests/: test_for_my_figures.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: MyMemoryResource.hpp  MyVector.hpp
lab5/src/: MyMemoryResource.cpp
lab5/tests/: Test_MyMemoryResource.cpp
lab6/: CMakeLists.txt
lab6/include/: concept.hpp  fight_manager.hpp  npc.hpp  observer.hpp  visitor.hpp
lab6/src/: fight_manager.cpp  main.cpp  npc.cpp
lab6/tests/: test.cpp
lab7/: CMakeLists.txt
lab7/Gtest/: CMakeLists.txt  NPCTest.cpp
lab7/include/: Bear.h  NPC.h  concept.hpp  coords.hpp  fight_manager.hpp  npc.hpp  observer.hpp
lab7/src/: Bear.cpp  CMakeLists.txt  Factory.cpp  fight_manager.cpp  main.cpp  npc.cpp
lab7/tests/: test.cpp
